Fix alignment and spacing

--- a/style.css
+++ b/style.css
@@ -11,14 +11,19 @@
   --fw-300: 600;
   --fw-400: 700;
 
+  --fw-button: 500;
+
   --fs-100: 0.75rem;
   --fs-200: 0.8125rem;
+  --fs-210: 0.875rem;
   --fs-300: 1rem;
   --fs-400: 1.125rem;
   --fs-500: 1.25rem;
   --fs-600: 1.5rem;
   --fs-700: 2.375rem;
   --fs-800: 4rem;
+
+  --fs-button: 0.875rem;
 
   --spacing-100: 1rem;
   --spacing-200: 2rem;
@@ -47,10 +52,116 @@ a svg {
   }
 }
 
+/* Button */
+
+.button {
+  cursor: pointer;
+  font-weight: var(--fw-button);
+  font-size: var(--fs-button);
+  background: transparent;
+  color: var(--clr-neutral-100);
+  border: 1px solid var(--clr-neutral-100);
+  line-height: 1em;
+  border-radius: 50px;
+  padding: 0.75em 1.75em;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+a.button {
+  text-decoration: none;
+}
+
+.hamburger {
+  border: 0;
+  background: none;
+  color: var(--clr-neutral-100);
+  font-size: 1.3rem;
+}
+
+.hamburger [data-closed] {
+  display: none;
+}
+
+/* Hero */
+
+.hero {
+  font-family: var(--ff-secondary);
+  text-align: center;
+}
+
+.hero .role {
+  font-size: var(--fs-700);
+  letter-spacing: calc(-0.135 * 1em);
+}
+
+.hero .skill {
+  font-size: var(--fs-600);
+  letter-spacing: calc(-0.055 * 1em);
+}
+
+.hero a {
+  font-style: italic;
+}
+
+.hero a::after {
+  content: "";
+  display: block;
+  border: 1px solid var(--clr-neutral-100);
+}
+
+@media (min-width: 50em) {
+  .hero {
+    max-width: 700px;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 50em) {
+  .hero {
+    padding-inline: var(--fs-600);
+  }
+}
+
 /* General */
+
+.title {
+  font-family: var(--ff-tertiary);
+  font-size: var(--fs-600);
+}
+
+.title.icon {
+  display: flex;
+  align-items: center;
+  gap: var(--spacing-100);
+}
 
 .brand {
   width: 7rem;
+}
+
+.products .title {
+  font-family: var(--ff-secondary);
+  font-size: var(--fs-500);
+}
+
+.products h3.title.icon {
+  justify-content: center;
+}
+
+.products h2.title {
+  font-size: 0.8125rem;
+}
+
+.products article {
+  padding-block: var(--spacing-300);
+  border-bottom: 1px solid var(--clr-neutral-100);
+}
+
+.products article h3 + p,
+.products .contribution-list {
+  padding-block-start: var(--spacing-200);
 }
 
 .primary-nav {
@@ -75,94 +186,28 @@ a svg {
 }
 
 .primary-nav .socials li {
-  margin-inline: 1rem;
+  margin-inline: 0.5rem;
   max-height: max-content !important;
 }
 
 .primary-nav .socials img {
   width: var(--icon-size);
-}
-
-.hero {
-  font-family: var(--ff-secondary);
-}
-
-.hero a {
-  font-style: italic;
-}
-
-.hero a::after {
-  content: "";
   display: block;
-  border: 1px solid var(--clr-neutral-100);
 }
 
 .tools {
+  flex-wrap: wrap;
+}
+
+.tool {
+  width: 100px;
   display: flex;
-  flex-flow: column;
-  gap: var(--spacing-100);
+  justify-content: center;
+  padding-block: 0.75rem;
 }
 
-.hero,
-.tools {
-  text-align: center;
-}
-
-.tool-item {
-  --width: 100px;
-  --spacing: 1.25rem;
-
-  max-width: calc(var(--width) + var(--spacing));
-  padding-inline: var(--spacing);
-}
-
-footer .socials {
-  display: flex;
-  gap: 0.85rem;
-}
-
-footer .socials img {
-  width: 1.25rem;
-}
-
-.button {
-  cursor: pointer;
-  background: transparent;
-  color: var(--clr-neutral-100);
-  border: 2px solid var(--clr-neutral-100);
-  line-height: 1em;
-  border-radius: 50px;
-  padding: 0.75em 1.75em;
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-a.button {
-  text-decoration: none;
-}
-
-.legal {
-  position: relative;
-}
-
-.legal::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  height: 3px;
-  background-color: var(--clr-neutral-100);
-}
-
-.hamburger {
-  border: 0;
-  background: none;
-  color: var(--clr-neutral-100);
-  font-size: 1.3rem;
-}
-
-.hamburger [data-closed] {
-  display: none;
+.tool img {
+  max-width: 70%;
 }
 
 .contribution-list li {
@@ -176,7 +221,7 @@ a.button {
 .contribution-list li::before {
   content: "";
   display: block;
-  height: 2px;
+  height: 1px;
   background-color: var(--clr-neutral-100);
   position: absolute;
   inset: 0 0 0;
@@ -189,9 +234,46 @@ a.button {
   justify-content: space-between;
 }
 
-.section-title {
-  font-family: var(--ff-tertiary);
+footer .socials {
+  display: flex;
+  gap: 0.85rem;
+}
+
+footer .socials img {
+  width: 1.25rem;
+}
+
+footer > header {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  gap: var(--spacing-200);
+  padding-block-end: var(--spacing-400);
+}
+
+footer header h2.title.icon {
+  font-family: var(--ff-primary);
+  font-size: var(--fs-210);
+  gap: 0.5rem;
+}
+
+footer header h2.title.icon svg {
+  height: 9px;
+}
+
+footer header p {
   font-size: var(--fs-600);
+  font-weight: var(--fw-400);
+}
+
+footer header .button {
+  font-weight: var(--fw-button);
+}
+
+.legal {
+  border-top: 1px solid var(--clr-neutral-100);
+  padding-block-start: 1rem;
 }
 
 @media (min-width: 50rem) {
@@ -200,9 +282,16 @@ a.button {
     justify-content: space-between;
   }
 
-  .hero {
-    max-width: 600px;
-    margin: 0 auto;
+  .tool {
+    width: 120px;
+  }
+
+  .products h3.title.icon {
+    justify-content: unset;
+  }
+
+  .products article {
+    padding-block-end: var(--spacing-400);
   }
 }
 
@@ -214,7 +303,6 @@ a.button {
     align-items: center;
   }
 
-  .hero,
   .tools {
     padding-inline: var(--fs-600);
   }
@@ -295,7 +383,7 @@ a.button {
 }
 
 .centered[data-direction="horizontal"] {
-  flex-flow: row;
+  flex-flow: row wrap;
 }
 
 .display-md {
@@ -304,7 +392,7 @@ a.button {
 
 @media (min-width: 50em) {
   .container {
-    padding-inline: 120px;
+    padding-inline: 140px;
   }
 
   .display-md {
@@ -327,6 +415,7 @@ a.button {
 
   .even-columns {
     flex-direction: column;
+    align-items: center;
   }
 
   .even-columns[data-reversed] {
